Simple servlet with vue.js

--- a/src/main/webapp/static/mainForm.html
+++ b/src/main/webapp/static/mainForm.html
@@ -1,15 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:v-on="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
 <h2>Main Page</h2>
 <br>
+<!--
 <form method="post" action="/servletExample/main-servlet">
     <input name = "message">
     <button type="submit">Отправить</button>
 </form>
+-->
+<div id="formForRegistration">
+    <p>Введите номер телефона: {{ phoneNumber }}</p>
+    <input id="UsersProblem.phoneNumber" v-model="phoneNumber">
+    <p>Введите своё сообщение:</p>
+    <input id="UsersProblem.message" v-model="message">
+    <br><br>
+    <button v-on:click="sendOnServer">ОТПРАВИТЬ</button>
+</div>
 </body>
+<script>
+    var formForRegistration = new Vue({
+        el: '#formForRegistration',
+        data: {
+            phoneNumber: '',
+            message: ''
+        },
+        methods: {
+            sendOnServer: function () {
+                axios.post(window.location.origin + "/servletExample/main-servlet", {
+                    method: 'POST',
+                    data: {
+                        phoneNumber: this.phoneNumber,
+                        message: this.message
+                    }
+                })
+                /*fetch(window.location.origin + "/servletExample/main-servlet", {
+                    method: 'POST',
+                    data: {
+                        phoneNumber: this.phoneNumber,
+                        message: this.message
+                    },
+                    body: {phoneNumber, message},
+                });*/
+            }
+        }
+    });
+</script>
 </html>
